// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render fields-editor when there is no layername 1`] = `
<Fragment>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label="Tile layer"
    labelType="label"
  >
    <EuiFieldText
      isInvalid={true}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText="Zoom levels where the layer is present in the tiles. This does not correspond directly to visibility. Layer data from lower levels can always be displayed at higher zoom levels (but not vice versa)."
    label="Available levels"
    labelType="label"
  >
    <ValidatedDualRange
      allowEmptyRange={false}
      compressed={true}
      formRowDisplay="columnCompressed"
      fullWidth={false}
      label=""
      max={24}
      min={0}
      onChange={[Function]}
      prepend="Zoom"
      showInput="inputWithPopover"
      showLabels={true}
      showRange={true}
      value={
        Array [
          4,
          14,
        ]
      }
    />
  </EuiFormRow>
</Fragment>
`;

exports[`should render with fields 1`] = `
<Fragment>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label="Tile layer"
    labelType="label"
  >
    <EuiFieldText
      isInvalid={false}
      onChange={[Function]}
      value="foobar"
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText="Zoom levels where the layer is present in the tiles. This does not correspond directly to visibility. Layer data from lower levels can always be displayed at higher zoom levels (but not vice versa)."
    label="Available levels"
    labelType="label"
  >
    <ValidatedDualRange
      allowEmptyRange={false}
      compressed={true}
      formRowDisplay="columnCompressed"
      fullWidth={false}
      label=""
      max={24}
      min={0}
      onChange={[Function]}
      prepend="Zoom"
      showInput="inputWithPopover"
      showLabels={true}
      showRange={true}
      value={
        Array [
          4,
          14,
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText="Fields which are available in the \`foobar\` layer. These can be used for tooltips and dynamic styling."
    label="Fields"
    labelType="label"
  >
    <MVTFieldConfigEditor
      fields={Array []}
      onChange={[Function]}
    />
  </EuiFormRow>
</Fragment>
`;

exports[`should render without fields 1`] = `
<Fragment>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label="Tile layer"
    labelType="label"
  >
    <EuiFieldText
      isInvalid={false}
      onChange={[Function]}
      value="foobar"
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText="Zoom levels where the layer is present in the tiles. This does not correspond directly to visibility. Layer data from lower levels can always be displayed at higher zoom levels (but not vice versa)."
    label="Available levels"
    labelType="label"
  >
    <ValidatedDualRange
      allowEmptyRange={false}
      compressed={true}
      formRowDisplay="columnCompressed"
      fullWidth={false}
      label=""
      max={24}
      min={0}
      onChange={[Function]}
      prepend="Zoom"
      showInput="inputWithPopover"
      showLabels={true}
      showRange={true}
      value={
        Array [
          4,
          14,
        ]
      }
    />
  </EuiFormRow>
</Fragment>
`;
